Fixed scrollbar issues

--- a/client/app/Views/styles/portal.css
+++ b/client/app/Views/styles/portal.css
@@ -1,12 +1,14 @@
 .container { /* <div> */ 
-  margin-top: 50px;
   width: 100%;
-
-  background-color: #2a2a2a;
 }
 
 .Portal__Container {
+  position: absolute;
+    top: 50px;
+  overflow-y: scroll;
   height: 100%;
   width: 100%;
   padding: 15px;
+  margin: 0px auto;
+  background-color: #2a2a2a;
 }
