--- a/client/app/modules/Chatroom/styles/index.css
+++ b/client/app/modules/Chatroom/styles/index.css
@@ -1,13 +1,7 @@
 .container { /* <div> - Root container */
-  position: absolute;
   overflow-y: scroll;
-  padding-top:30px;
   height: 100%;
   margin: 0px auto;
-  right: 680px;
-  left: 0px;
-  background-color: #ffffff;
-
 }
 
 .masterLogContainer {
@@ -48,7 +42,7 @@
   margin: 0 20px;
 }
 
-.topicName{
+.topicName {
   top: -10px;
   left: 50%;
   padding: 0 15px;
